# trowel

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: run-tests.yaml
src/trowel_core/: __init__.py  cli.py  logger.py  main.py  setup.py
src/trowel_core/builder/services/: __init__.py  builder_service.py
src/trowel_core/builder/strategies/: __init__.py  builder_strategy.py  make_strategy.py
src/trowel_core/config/models/: __init__.py  config_model.py
src/trowel_core/config/parsers/: __init__.py  config_parser.py  json_parser.py
src/trowel_core/config/services/: config_service.py
src/trowel_core/exceptions/: __init__.py  base_exception.py  config_exception.py
src/trowel_core/models/: model_config.py
src/trowel_core/resources/templates/: Makefile
src/trowel_core/template/builders/: __init__.py  make_builder.py  template_builder.py
src/trowel_core/template/services/: __init__.py  template_service.py
tests/e2e/environments/base_configuration/: trowel.json
tests/e2e/environments/invalid_empty_sources/: trowel.json
tests/e2e/environments/invalid_undefined_name/: main.c  trowel.json
tests/e2e/environments/invalid_undefined_sources/: trowel.json
tests/e2e/environments/valid_base_omit_type/: trowel.json
tests/e2e/environments/valid_glob_sources/: main2.c  trowel.json
tests/e2e/environments/valid_library/: main.c  trowel.json
tests/e2e/scenarios/base_configuration/: base_configuration_test.py
tests/e2e/utils/: get_environment_dir.py  get_project_dir.py  project_build.py  projects.py
tests/environments/base/: trowel.json
(+18 files in other folders)
