[project]
name = "trowel-core"
version = "0.0.0"
description = "Trowel is a C builder and package manager for modern developers."
authors = [
    {name = "Letícia Aguiar",email = "letsaguiar@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "trowel_core", from = "src"}]

[tool.poetry.scripts]
trowel = "trowel_core.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
